# AshaSaathi

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: risk_model.tflite
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
app/src/main/java/com/ashasaathi/: AshaSaathiApp.kt  MainActivity.kt
app/src/main/java/com/ashasaathi/data/model/: Models.kt  VoiceFormModels.kt
app/src/main/java/com/ashasaathi/data/repository/: AuthRepository.kt  DiaryRepository.kt  HouseholdRepository.kt  LocalRecordsStore.kt  PatientRepository.kt  UserPreferencesRepository.kt  VaccinationRepository.kt  VisitRepository.kt
app/src/main/java/com/ashasaathi/di/: AppModule.kt
app/src/main/java/com/ashasaathi/service/ai/: LlamaService.kt  RiskEngine.kt  TFLiteRiskService.kt  VoiceAIPipeline.kt  WhisperService.kt
app/src/main/java/com/ashasaathi/service/model/: ModelDownloadService.kt
app/src/main/java/com/ashasaathi/service/notification/: AshaSaathiMessagingService.kt  NotificationService.kt  ReminderWorker.kt
app/src/main/java/com/ashasaathi/service/sync/: SyncWorker.kt
app/src/main/java/com/ashasaathi/service/tts/: TTSService.kt
app/src/main/java/com/ashasaathi/ui/: LocalAppLanguage.kt
app/src/main/java/com/ashasaathi/ui/components/: CommonComponents.kt
app/src/main/java/com/ashasaathi/ui/components/voice/: VoiceFAB.kt
app/src/main/java/com/ashasaathi/ui/navigation/: NavRoutes.kt  RootNavGraph.kt
app/src/main/java/com/ashasaathi/ui/screens/auth/: LoginScreen.kt  ProfileSetupScreen.kt  SplashScreen.kt
app/src/main/java/com/ashasaathi/ui/screens/diary/: DiaryScreen.kt
app/src/main/java/com/ashasaathi/ui/screens/home/: HomeScreen.kt
app/src/main/java/com/ashasaathi/ui/screens/households/: AddHouseholdScreen.kt  HouseholdDetailScreen.kt  HouseholdsScreen.kt
app/src/main/java/com/ashasaathi/ui/screens/map/: MapScreen.kt
app/src/main/java/com/ashasaathi/ui/screens/mcp/: MCPCardScreen.kt
app/src/main/java/com/ashasaathi/ui/strings/: AppStrings.kt
app/src/main/java/com/ashasaathi/ui/theme/: Theme.kt  Typography.kt
app/src/main/java/com/ashasaathi/ui/viewmodel/: AddPatientViewModel.kt  AppViewModel.kt  AuthViewModel.kt  DiaryViewModel.kt  HomeViewModel.kt  HouseholdDetailViewModel.kt  HouseholdsViewModel.kt  LoginViewModel.kt  MCPCardViewModel.kt  MapViewModel.kt  ModelSetupViewModel.kt  PatientDetailViewModel.kt  PlannerViewModel.kt  ProfileSetupViewModel.kt  ReportsViewModel.kt  SettingsViewModel.kt  TBDotsViewModel.kt  VaccinationViewModel.kt  VisitFormViewModel.kt  VoiceFormViewModel.kt  VoiceViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
scripts/: generate_dummy_tflite.py
(+10 files in other folders)
